# api-service/src/spec/swagger.json
@@ -145,7 +145,7 @@
 				"type": "object",
 				"additionalProperties": true
 			},
-			"Pick_Task.strategyId_": {
+			"CreateTaskOptions": {
 				"properties": {
 					"strategyId": {
 						"type": "number",
@@ -156,7 +156,7 @@
 					"strategyId"
 				],
 				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
+				"additionalProperties": true
 			},
 			"SearchTasksOptions": {
 				"properties": {
@@ -450,7 +450,7 @@
 				"type": "object",
 				"additionalProperties": true
 			},
-			"Pick_Strategy.Exclude_keyofStrategy.id-or-createdAt-or-updatedAt-or-isActive__": {
+			"CreateStrategyOptions": {
 				"properties": {
 					"name": {
 						"type": "string"
@@ -467,13 +467,13 @@
 					},
 					"rules": {
 						"items": {
-							"$ref": "#/components/schemas/PricePercentageChangeRule"
+							"$ref": "#/components/schemas/StrategyRule"
 						},
 						"type": "array"
 					},
 					"actions": {
 						"items": {
-							"$ref": "#/components/schemas/TelegramNotification"
+							"$ref": "#/components/schemas/StrategyAction"
 						},
 						"type": "array"
 					},
@@ -493,11 +493,7 @@
 					"taskType"
 				],
 				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"Omit_Strategy.id-or-createdAt-or-updatedAt-or-isActive_": {
-				"$ref": "#/components/schemas/Pick_Strategy.Exclude_keyofStrategy.id-or-createdAt-or-updatedAt-or-isActive__",
-				"description": "Construct a type with the properties of T except for those in type K."
+				"additionalProperties": true
 			},
 			"SearchStrategiesOptions": {
 				"properties": {
@@ -665,13 +661,9 @@
 				"type": "object",
 				"additionalProperties": true
 			},
-			"Pick_Signal.Exclude_keyofSignal.id-or-createdAt-or-updatedAt__": {
+			"CreateSingalOptions": {
 				"properties": {
 					"strategyId": {
-						"type": "number",
-						"format": "double"
-					},
-					"marketId": {
 						"type": "number",
 						"format": "double"
 					},
@@ -682,20 +674,24 @@
 					"asset": {
 						"type": "string"
 					},
+					"marketId": {
+						"type": "number",
+						"format": "double"
+					},
 					"producedAt": {
 						"anyOf": [
 							{
-								"type": "string"
-							},
-							{
 								"type": "string",
 								"format": "date-time"
+							},
+							{
+								"type": "string"
 							}
 						]
 					},
 					"actionsTriggered": {
 						"items": {
-							"$ref": "#/components/schemas/TelegramNotification"
+							"$ref": "#/components/schemas/StrategyAction"
 						},
 						"type": "array"
 					},
@@ -703,16 +699,12 @@
 				},
 				"required": [
 					"strategyId",
-					"marketId",
 					"taskId",
-					"asset"
+					"asset",
+					"marketId"
 				],
 				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"Omit_Signal.id-or-createdAt-or-updatedAt_": {
-				"$ref": "#/components/schemas/Pick_Signal.Exclude_keyofSignal.id-or-createdAt-or-updatedAt__",
-				"description": "Construct a type with the properties of T except for those in type K."
+				"additionalProperties": true
 			},
 			"SearchSignalsOptions": {
 				"properties": {
@@ -826,7 +818,7 @@
 				"type": "object",
 				"additionalProperties": true
 			},
-			"Pick_Market.name-or-url_": {
+			"CreateMarketOptions": {
 				"properties": {
 					"name": {
 						"type": "string"
@@ -840,7 +832,7 @@
 					"url"
 				],
 				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
+				"additionalProperties": true
 			},
 			"SearchMarketsOptions": {
 				"properties": {
@@ -900,6 +892,18 @@
 				},
 				"type": "object",
 				"additionalProperties": true
+			},
+			"UpdateMarketOptions": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"url": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"additionalProperties": true
 			}
 		},
 		"securitySchemes": {}
@@ -947,7 +951,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/Pick_Task.strategyId_"
+								"$ref": "#/components/schemas/CreateTaskOptions"
 							}
 						}
 					}
@@ -1361,7 +1365,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/Omit_Strategy.id-or-createdAt-or-updatedAt-or-isActive_"
+								"$ref": "#/components/schemas/CreateStrategyOptions"
 							}
 						}
 					}
@@ -1686,7 +1690,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/Omit_Signal.id-or-createdAt-or-updatedAt_"
+								"$ref": "#/components/schemas/CreateSingalOptions"
 							}
 						}
 					}
@@ -1934,7 +1938,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/Pick_Market.name-or-url_"
+								"$ref": "#/components/schemas/CreateMarketOptions"
 							}
 						}
 					}
@@ -2162,7 +2166,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/Pick_Market.name-or-url_"
+								"$ref": "#/components/schemas/UpdateMarketOptions"
 							}
 						}
 					}
